--- a/01-next-rn/package.json
+++ b/01-next-rn/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "1.0.0",
-    "antd": "5.19.3",
+    "antd": "^5.19.3",
     "next": "14.2.5",
     "query-string": "9.1.0",
     "react": "18.3.1",
