--- a/02-nest-rn/package.json
+++ b/02-nest-rn/package.json
@@ -20,20 +20,31 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "10.3.10",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "10.3.10",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^11.0.3",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "10.3.10",
     "@types/bcrypt": "^5.0.2",
+    "@types/uuid": "^10.0.0",
     "api-query-params": "^5.4.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dayjs": "^1.11.13",
+    "handlebars": "^4.7.8",
     "mongoose": "^8.13.2",
+    "nodemailer": "^6.10.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "0.2.2",
-    "rxjs": "7.8.1"
+    "rxjs": "7.8.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "10.4.2",
@@ -42,6 +53,9 @@
     "@types/express": "4.17.21",
     "@types/jest": "29.5.12",
     "@types/node": "20.14.12",
+    "@types/nodemailer": "^6.4.17",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/passport-local": "^1.0.38",
     "@types/supertest": "6.0.2",
     "@typescript-eslint/eslint-plugin": "7.17.0",
     "@typescript-eslint/parser": "7.17.0",
